--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,15 @@
     margin:0;
     box-sizing: border-box;
 }
+/*General style rules*/
+body{
+    min-height:100vh;
+    display: flex;
+    flex-direction:column;
+    /*Generic project styles*/
+    color: #3a3a3a;
+
+}
 /*Header*/
 header{
     background:lightblue;
@@ -11,6 +20,8 @@ header{
 /*Main*/
 main{
     background:lightcoral;
+    /*Make main element take up surplus space, push footer down*/
+    flex: 1 0 auto;
 }
 /*Footer*/
 footer{
