--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Oswald:wght@200..700&display=swap');
 /*Wildcard asteriks selctor to override default styles added by browser*/
 *{
     padding:0;
@@ -11,6 +14,7 @@ body{
     flex-direction:column;
     /*Generic project styles*/
     color: #3a3a3a;
+    font-family:Lato, sans-serif;
 
 }
 /*Header*/
