--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,12 @@ body{
 }
 /*Header*/
 header{
-    background:lightblue;
+    background:#ffffff;
+    padding: 0 1 rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 /*Main*/
 main{
