Style logo, removed link underline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,11 @@ header{
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
 }
+header a {
+    text-decoration: 0;
+    color: inherit;
+
+}
 /*Main*/
 main{
     background:lightcoral;
@@ -38,4 +43,7 @@ footer{
 }
 h1{
     font-family:Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color:#252525; 
 }
