--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,9 @@ header{
     z-index: 99;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 header a {
     text-decoration: 0;
@@ -38,9 +41,9 @@ h1{
     color:#252525; 
 }
 #menu{
-    list-style-type: 0;
-    font-size:  110%;
+    font-size: 110%;
     letter-spacing: 4px;
+    list-style-type: none;
 }
 #menu > li{
     margin-bottom: 1em;
@@ -49,15 +52,25 @@ h1{
     border-bottom: 1px solid #3a3a3a;
 }
 /* Navbar styles with dropdown toggle */
-nav{
+nav {
     position: absolute;
-    background-color:#ffffff;
+    background-color: #ffffff;
     width: 100%;
     left: 0;
     padding: 0 1rem;
-    box-shadow:0 2px 2px #3a3a3a;
+    box-shadow: 0 2px 2px #3a3a3a;
     display: none;
-
+    top: 100%;
+}
+/*Nav toggle */
+#nav-toggle:checked~nav{
+    display: block;
+}
+#nav-toggle{
+    display: none;
+}
+.nav-toggle-label{
+    font-size: 2rem;
 }
 /*Main Content*/
 main{
