--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ main{
     background:lightcoral;
     /*Make main element take up surplus space, push footer down*/
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 /*Footer*/
 footer{
