--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,11 +74,18 @@ nav {
 }
 /*Main Content*/
 main{
-    background:lightcoral;
     /*Make main element take up surplus space, push footer down*/
     flex: 1 0 auto;
     margin-top: 47px;
 }
+/*Hero section styles*/
+#hero{
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
+}
+
+
 /*Footer*/
 #social-networks{
     text-align:center;
