--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,8 @@ h3 {
   letter-spacing: 2px;
   color: #252525;
 }
-.hidden-heading{
-    display: none;
+.hidden-heading {
+  display: none;
 }
 /*Header*/
 header {
@@ -141,36 +141,36 @@ main {
   align-items: center;
   justify-content: center;
 }
- /*Meet up section*/
- #times{
-    background: url('../images/dublin-city.webp') no-repeat center/cover;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  #times div {
-    color:#fafafa;
-    background-color: rgba(0,0,0, .6);
-    padding: 15px;
-    /*This will not wrap on screens of less than 400px wide
+/*Meet up section*/
+#times {
+  background: url("../images/dublin-city.webp") no-repeat center/cover;
+  display: flex;
+  flex-wrap: wrap;
+}
+#times div {
+  color: #fafafa;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 15px;
+  /*This will not wrap on screens of less than 400px wide
     each div will expand to fil the available space on its row*/
-    text-align: center;
-    flex-basis: 200px;
-    flex-grow: 1;
-    /*Creates a grid of meetup times div over the background image*/
-    border: 2px solid white;
-  }
-  #times h3{
-    /*Override the heading color set in general styles*/
-    color:#fafafa;
-  }
-  /*Gallery styles*/
-  #photos img {
-    width: 100%;
-    line-height: 1em;
-  }
-  #photos {
-    line-height: 0;
-  }
+  text-align: center;
+  flex-basis: 200px;
+  flex-grow: 1;
+  /*Creates a grid of meetup times div over the background image*/
+  border: 2px solid white;
+}
+#times h3 {
+  /*Override the heading color set in general styles*/
+  color: #fafafa;
+}
+/*Gallery styles*/
+#photos img {
+  width: 100%;
+  line-height: 1em;
+}
+#photos {
+  line-height: 0;
+}
 /*Footer*/
 #social-networks {
   text-align: center;
@@ -183,6 +183,13 @@ main {
   font-size: 160%;
   padding: 5%;
   color: #3a3a3a;
+}
+/*Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+  #photos {
+    column-count: 2;
+    column-gap: 0;
+  }
 }
 /*Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
@@ -233,12 +240,19 @@ main {
     text-align: end;
     align-self: flex-end;
   }
- 
+  /*Gallery*/
+  #photos {
+    column-count: 3;
+  }
 }
 /*Large devices(laptops and desktops, 992px and up)*/
 @media screen and (min-width: 992px) {
   #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
+  }
+  /*Gallery*/
+  #photos {
+    column-count: 4;
   }
 }
 /* Large devices (laptops and desktops, 1200px and up)*/
